Support getting a page of VMs on a cluster
Change-Id: I71ea0a3cb15b4611b23de98b6ac53c27a159eb5f